# Sistema-reservas

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 113c7bb9c6b0_create_tables.py  810a3c9c2e44_create_user_table.py  d200e0c9ec19_change_created_at_fiel_default_value.py  d836ddb915ca_add_total_price_field.py
seazone/: main.py
seazone/application/dtos/: auth_dto.py  error_dto.py  filter_params_dto.py  property_dtos.py  reservation_dtos.py
seazone/application/usecases/auth/: create_user.py  login.py
seazone/application/usecases/property/: create_property.py  delete_property.py  get_properties_by_id.py  list_properties.py  update_property.py  verify_availability.py
seazone/domain/: models.py
seazone/infra/api/: routers.py
seazone/infra/database/: database.py
seazone/infra/di/: dependencies.py
seazone/infra/middleware/: exception_middleware.py  verification_token_middleware.py
seazone/infra/repository/: base_repository.py  property_repository.py  reservation_repository.py  user_repository.py
seazone/infra/services/: jwt_token_service.py
seazone/infra/settings/: settings.py
seazone/models/: models.py
tests/: conftest.py
tests/integration/property_tests/: create_property_test.py  delete_property_test.py  get_property_by_id_test.py  list_properties_test.py  update_property_test.py  verify_availability_test.py
tests/integration/reservation_tests/: cancel_reservation_test.py  create_reservation_test.py  list_reservations_test.py  update_reservation_test.py
(+7 files in other folders)
